update JVM memory manager README.MD